# PR-Review-Agent

./: .env.example  .gitignore  README.en.md  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  cli.py  config.py  logging_setup.py  main.py
app/agents/: __init__.py  aggregator.py  base.py  bug_hunter.py  patch_generator.py  planner.py  review_publisher.py  security_reviewer.py  test_executor.py
app/api/: __init__.py  deps.py  health.py  schemas.py
app/api/v1/: __init__.py  reviews.py  webhooks.py
app/blackboard/: __init__.py  blackboard.py
app/db/: __init__.py  base.py  models.py  repositories.py  session.py
app/llm/: __init__.py  client.py  prompts.py
app/models/: __init__.py  blackboard.py  common.py  issue.py  patch.py  plan.py  review.py  test_report.py
app/orchestrator/: __init__.py  orchestrator.py  state_machine.py
app/tools/: __init__.py  analyzer_tool.py  gateway.py  github_tool.py  memory_tool.py  sandbox_tool.py
app/webhook/: __init__.py  receiver.py
config/: config.example.yaml  default.yaml
docker/sandbox/: Dockerfile  build.sh
docs/: openapi.yaml
scripts/: export_openapi.py
tests/: conftest.py  test_aggregator.py  test_analyzer.py  test_config.py  test_github_tool.py  test_health.py  test_llm.py  test_memory.py  test_models.py  test_openapi_contract.py  test_reviews.py  test_security_fixes.py  test_state_machine.py  test_test_report.py  test_webhook.py  test_webhooks.py
